Maintenance devoirs OK

--- a/app/Resources/views/user/itemUsers.html.twig
+++ b/app/Resources/views/user/itemUsers.html.twig
@@ -2,7 +2,7 @@
 
 {% block pageHeader %}
     <div>{{ template }}</div>
-    <div class="page-header">
+    <div class="page-header littleScroll">
         <div class="container">
             <h2 class="color3">Fiche {{ entityName }}</h2>
             <ul class="breadcrumb">
@@ -185,7 +185,7 @@
         });
     </script>
 
-    <div class="container mt-100 mb-40">
+    <div class="container mt-220 mb-40">
         <div class="row">
             <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#InscrDesinscr" aria-controls="InscrDesinscr" role="tab" data-toggle="tab"><i class="fa fa-external-link  fa-fw"></i> Inscriptions</a></li>
