--- a/app/Resources/views/user/one.html.twig
+++ b/app/Resources/views/user/one.html.twig
@@ -2,7 +2,7 @@
 
 {% block pageHeader %}
     <div>{{ template }}</div>
-    <div class="page-header">
+    <div class="page-header littleScroll">
         <div class="container">
             <h2 class="color3">Fiche Utilisateur</h2>
             <ul class="breadcrumb">
@@ -247,7 +247,7 @@
         });
     </script>
 
-    <div class="container mt-100 mb-40" data-userIdFiche="{{ user.id }}">
+    <div class="container mt-220 mb-40" data-userIdFiche="{{ user.id }}">
         <div class="col-sm-3">
             <ul class="nav nav-pills nav-stacked pull-left" role="tablist" style="padding-bottom: 5px;padding-top: 5px">
                 <li role="presentation"  class="active">
