--- a/app/Resources/views/ressources/allDevoirs.html.twig
+++ b/app/Resources/views/ressources/allDevoirs.html.twig
@@ -2,7 +2,7 @@
 
 {% block pageHeader %}
     <div>{{ template }}</div>
-    <div class="page-header">
+    <div class="page-header littleScroll">
         <div class="container">
             <h2 class="color3">Devoirs</h2>
             <ul class="breadcrumb">
@@ -34,7 +34,7 @@
         });
     </script>
 
-    <div class="container mt-100 mb-40">
+    <div class="container mt-220 mb-40">
         <div class="row">
             <div class="col-md-12">
                 <table class="tablesorter ">
