--- a/app/Resources/views/emailing.html.twig
+++ b/app/Resources/views/emailing.html.twig
@@ -106,8 +106,7 @@
                         users: users
                     },
                     success: function (data) {
-                        console.log(data)
-                        //window.location.href = window.location.href;
+                        window.location.href = window.location.href;
                     }
                 });
             });
