--- a/app/Resources/views/emailing.html.twig
+++ b/app/Resources/views/emailing.html.twig
@@ -88,7 +88,6 @@
             });
 
             $('.btnSendMsg').click(function(){
-                $('.wellSendEmail').hide();
                 $(this).animate('opacity', 1000);
                 var objet = $('#emailingSujet').val();
                 var message = CKEDITOR.instances['emailingTexte'].getData();
@@ -107,11 +106,7 @@
                         users: users
                     },
                     success: function (data) {
-                        CKEDITOR.instances['emailingTexte'].setData(' ');
-                        $('#emailingSujet').val('');
-                        $('.wellSendEmail').show();
-                        $('.btnCancelFiltersEmailing').click();
-                        //window.location.href = window.location.href;
+                        window.location.href = window.location.href;
                     }
                 });
             });
@@ -240,9 +235,6 @@
         </div>
         <div class="row emailingMSG">
             <div class="col-sm-12">
-                <div class="form-group">
-                    <div class="wellSendEmail">Votre email a bien été envoyé !</div>
-                </div>
                 <div class="form-group">
                     <input type="text" id="emailingSujet" />
                     <label for="emailingSujet">Objet*</label>
