--- a/app/Resources/views/chat/chat.html.twig
+++ b/app/Resources/views/chat/chat.html.twig
@@ -88,7 +88,7 @@
                 async: false,
                 dataType: "json",
                 success: function (data) {
-                    window.location.href = window.location.href;
+                    //window.location.href = window.location.href;
                 },
                 error: function(xhr, status, error) {
                 }
