--- a/app/Resources/views/cours/adminChat.html.twig
+++ b/app/Resources/views/cours/adminChat.html.twig
@@ -27,11 +27,28 @@
             <div class="LabelAdmin col-sm-3">Nom</div>
             <input data-champName="nom" class="champAdmin col-sm-9 col-xs-12" value="{{ chat.nom }}"/>
         </div>
+        <div class="row selectPickerContainer chatAdminSelectPicker">
+            <div class="LabelAdmin col-sm-3">Responsable(s)</div>
+            <div class="responsablesIds hidden">
+                {% for key,administrateur in chat.administrateurs %}
+                    <span>{{ administrateur.id }}</span>
+                {% endfor %}
+            </div>
+            <select id="MyBtnSelectPicker{{ chat.id }}" class="selectpicker col-sm-9 col-xs-12" data-style="MyBtnSelectPicker" title="Ajouter un responsable" data-live-search="true" multiple>
+                {% for key,user in users %}
+                    <option value="{{ user.id }}" title="{{ user.firstname }} {{ user.lastname }}" class="addNewResponsable"  data-content="<span data-idUser='{{ user.id }}'>{{ user.firstname }} {{ user.lastname }}</span>">{{ user.firstname }} {{ user.lastname }}</option>
+                {% endfor %}
+            </select>
+        </div>
         <div class="row">
             <div class="LabelAdmin col-sm-3">Description</div>
             <div class="col-sm-9  col-xs-12 noPadding">
                 <textarea data-champName="description" id="zone_{{ zoneId }}_chat_{{ chat.id }}_descr" class="simpleEditor editor champAdmin" readonly>{{ chat.description }}</textarea>
             </div>
+        </div>
+        <div class="row">
+            <div class="LabelAdmin col-sm-3">Activé</div>
+            <input data-champName="enabled" class="col-xs-2" {% if chat.enabled %}checked{% endif %} type="checkbox" />
         </div>
     </div>
 </li>
